smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/syntax-error-token.smithy
// Syntax error at line 2, column 1: Expected a namespace definition but found ERROR('!') | Model
!!!!!!!!!Nope!!!!!!!!!!
